fix(nav-menu): footer not showing at 414px breakpoint
The fix is adding height at carousel main container. The height
is calculated with 100vh minus the current height of nav. By doing
so we could get a nice full vh container to show the nav-menu
contents.

--- a/styles/css/app.css
+++ b/styles/css/app.css
@@ -395,12 +395,18 @@ nav a {
   }
 }
 .carousel {
+  height: calc(100vh - 5rem);
   position: relative;
   z-index: 1;
 }
 @media (min-width: 1280px) and (max-width: 1920px) {
   .carousel {
     display: flex;
+  }
+}
+@media (min-width: 769px) and (max-width: 1920px) {
+  .carousel {
+    height: calc(83vh);
   }
 }
 
